Web Inspector: Cannot deep expand an element that has previously been partially expanded https://bugs.webkit.org/show_bug.cgi?id=110424

In the case where the children from the provided node have already been pushed, traverse children at the depth provided until we find children that have not been pushed yet.

Reviewed by Pavel Feldman.

Canonical link: https://commits.webkit.org/129160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144057 268f45cc-cd09-0410-ab3c-d52691b4dbfc